--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,13 @@ html {
   --light-mode-input: #858585;
   --light-mode-background: #fafafa;
   --dark-mode-text-light-mode-elements: #ffffff;
+
+  --background-color: #fafafa;
+  --element-color: #ffffff;
+  --text-color: #111517;
+  --input-color: #858585;
+  --option-filter:#85858520;
+  --shadow-color:#00000020;
 }
 
 *,
@@ -34,8 +41,8 @@ body {
 
   width: 100%;
   min-height: 100vh;
-  background-color: var(--light-mode-background);
-  color: var(--light-mode-text);
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 img,
@@ -45,7 +52,7 @@ video {
   height: auto;
 }
 
-.main{
+.main {
   padding-bottom: 2rem;
 }
 
@@ -61,9 +68,9 @@ video {
   align-items: center;
   gap: 2rem;
   padding: 1rem 2rem;
-  background-color: var(--dark-mode-text-light-mode-elements);
+  background-color: var(--element-color);
   border-radius: 0.5rem;
-  box-shadow: -0.1rem 0.1rem 0.5rem 0rem #00000020;
+  box-shadow: -0.1rem 0.1rem 0.5rem 0rem var(--shadow-color);
 }
 
 .search__icon {
@@ -79,8 +86,9 @@ video {
   flex-grow: 1;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 0.7rem;
-  color: var(--light-mode-input);
+  color: var(--input-color);
   border: none;
+  background-color: var(--element-color);
 }
 
 .input__search:focus {
@@ -94,7 +102,7 @@ video {
   width: 50%;
   font-size: 0.7rem;
   font-weight: 800;
-  color: var(--light-mode-text);
+  color: var(--text-color);
   border-radius: 0.5rem;
 
 }
@@ -107,8 +115,8 @@ video {
   justify-content: space-between;
   align-items: center;
   height: 2rem;
-  background-color: var(--dark-mode-text-light-mode-elements);
-  box-shadow: -0.1rem 0.1rem 0.5rem 0rem #00000020;
+  background-color: var(--element-color);
+  box-shadow: -0.1rem 0.1rem 0.5rem 0rem var(--shadow-color);
 }
 
 .filter__text {
@@ -118,7 +126,7 @@ video {
   height: 100%;
   display: flex;
   align-items: center;
-  padding-left: 1.5rem; 
+  padding-left: 1.5rem;
 }
 
 .filter__text::before {
@@ -127,7 +135,7 @@ video {
   right: .8rem;
   width: 0.4rem;
   height: 0.4rem;
-  border: 0.1rem solid var(--light-mode-text);
+  border: 0.1rem solid var(--text-color);
   border-left: 0;
   border-top: 0;
   transform: rotate(45deg);
@@ -145,8 +153,8 @@ video {
   flex-direction: column;
   width: 100%;
   padding: 0.5rem 0;
-  background-color: var(--dark-mode-text-light-mode-elements);
-  box-shadow: -0.1rem 0.1rem 0.5rem 0rem #00000020;
+  background-color: var(--element-color);
+  box-shadow: -0.1rem 0.1rem 0.5rem 0rem var(--shadow-color);
   transform: translate(0, 100%);
 }
 
@@ -172,7 +180,7 @@ video {
 
 .filter__radio:hover {
   cursor: pointer;
-  background-color: #85858520;
+  background-color: var(--option-filter)
 }
 
 .show-filter {
@@ -193,18 +201,18 @@ video {
   flex-direction: column;
   overflow: hidden;
   border-radius: 0.5rem;
-  box-shadow: -0.1rem 0.1rem 0.5rem 0rem #00000020;
+  box-shadow: -0.1rem 0.1rem 0.5rem 0rem var(--shadow-color);
 }
 
 .country__figure {
   line-height: 0;
 }
 
-.country__figure *:hover{
+.country__figure *:hover {
   cursor: pointer;
 }
 
-.country__image{
+.country__image {
   height: 150px;
   object-fit: cover;
 }
@@ -212,7 +220,7 @@ video {
 .country__info {
   padding: 1.25rem;
   padding-bottom: 2rem;
-  background-color: var(--dark-mode-text-light-mode-elements);
+  background-color: var(--element-color);
 }
 
 .country__name {
@@ -232,33 +240,33 @@ video {
   font-weight: 800;
 }
 
-.pagination{
+.pagination {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.pagination__buttons{
+.pagination__buttons {
   padding: 0 30%;
   display: flex;
   justify-content: center;
   /* gap: 0.2rem; */
 }
 
-.pagination__button{
+.pagination__button {
   width: 4rem;
   height: 2rem;
   padding: 0.5rem;
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 600;
   text-align: center;
-  color: var(--light-mode-text);
+  color: var(--text-color);
   border: none;
-  background-color: var(--dark-mode-text-light-mode-elements);
-  box-shadow: -0.1rem 0.1rem 0.5rem 0rem #00000020;
+  background-color: var(--element-color);
+  box-shadow: -0.1rem 0.1rem 0.5rem 0rem var(--shadow-color);
 }
 
-.pagination__text{
+.pagination__text {
   font-weight: 600;
   text-align: center;
 }
@@ -267,34 +275,35 @@ video {
 @media screen and (min-width:37.5em) {
 
 
-.countries{
-  padding: 2rem 5%;
-  justify-content: flex-start;
-}
-  .country{
+  .countries {
+    padding: 2rem 5%;
+    justify-content: flex-start;
+  }
+
+  .country {
     min-width: 16rem;
     width: 20%;
   }
 
-  .search-filter{
+  .search-filter {
     flex-direction: row;
     justify-content: space-between;
     padding: 2.5% 5%;
   }
 
-  .search{
+  .search {
     min-width: max-content;
     width: 40%;
   }
 
-  .filter{
+  .filter {
     min-width: 10rem;
     width: 20%;
     font-size: 0.8rem;
     font-weight: 600;
   }
 
-  .filter__select{
+  .filter__select {
     /* height: auto; */
   }
 
