--- a/css/share.css
+++ b/css/share.css
@@ -51,6 +51,7 @@ video {
     align-items: center;
     width: 100%;
     padding: 5%;
+    background-color: var(--element-color);
     box-shadow: 0rem 0.1rem 0.5rem 0rem var(--shadow-color);
 }
 
