--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ video {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   gap: 2rem;
   padding: 2rem 0;
 }
@@ -271,7 +272,8 @@ video {
 
   .countries {
     padding: 2rem 5%;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
+    justify-content: space-between;
   }
 
   .country {
