--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,19 @@ video {
   height: auto;
 }
 
+@keyframes myAnimation {
+  from {
+      opacity: 0;
+      /* transform: translateY(-100%); */
+  }
+
+  to {
+      opacity: 1;
+      /* transform: translateY(0%); */
+  }
+}
+
+
 .main {
   padding-bottom: 2rem;
 }
@@ -197,15 +210,18 @@ video {
   overflow: hidden;
   border-radius: 0.5rem;
   box-shadow: -0.1rem 0.1rem 0.5rem 0rem var(--shadow-color);
+  animation: myAnimation 1s;
 }
+
 
 .country__figure {
   line-height: 0;
 }
 
-.country__figure *:hover {
+/* .country__figure *:hover {
   cursor: pointer;
-}
+
+} */
 
 .country__image {
   height: 150px;
@@ -281,6 +297,13 @@ video {
     width: 20%;
   }
 
+  
+.country:hover{
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: transform 0.5s ease-in-out;
+}
+
   .search-filter {
     flex-direction: row;
     justify-content: space-between;
@@ -297,6 +320,11 @@ video {
     width: 20%;
     font-size: 0.8rem;
     font-weight: 600;
+  }
+
+  .pagination__button:hover{
+    cursor: pointer;
+    opacity: .9;
   }
 
   .filter__select {
